--- a/style.css
+++ b/style.css
@@ -354,7 +354,6 @@ header{
 	width:100%;
 	height:100px;
 	display:flex;
-  position:fixed;
 }
 /* Header END */
 
@@ -365,6 +364,7 @@ nav{
   align-items: center;
 	width:100%;
 	height:100%;
+  z-index: 2;
 }
 
 nav a{
@@ -444,6 +444,8 @@ footer a p{
 .featured-item{
 	width:100%;
 	height:100vh;
+  position:relative;
+  z-index: -1;
 }
 
 .featured-gif{
@@ -453,6 +455,16 @@ footer a p{
   background-position: center;
   background-image:url(image/preview.gif);
   background-size: cover;
+  position:absolute;
+}
+
+.overlay{
+  width:100%;
+  height:100%;
+  background-image:url(image/overlay.png);
+  background-repeat: repeat;
+  position:absolute;
+
 }
 
 /* Product section */
