--- a/style.css
+++ b/style.css
@@ -356,7 +356,6 @@ header{
 	display:flex;
   position:absolute;
   border-bottom:1px solid white;
-  top: 20px;
   left: 50%;
   transform: translate(-50%);
 }
@@ -409,7 +408,7 @@ footer{
 	width:100%;
 	height:50px;
 	background-color:#21363e;
-
+  margin-top:20px;
 }
 
 .footerInner{
@@ -617,6 +616,7 @@ footer a p{
 .products-listing{
   width:100%;
   display:flex;
+  margin-top:20px;
 }
 
 
@@ -626,6 +626,7 @@ footer a p{
 
 .product img{
   width:100%;
+  padding-bottom:30px;
 }
 
 
