--- a/style.css
+++ b/style.css
@@ -503,8 +503,10 @@ footer a p{
 }
 
 .text-section p{
-  font-size:25px;
-	padding: 10% 15% 0 15%;
+  font-size:1em;
+  padding-left: 10%;
+  padding-right: 10%;
+  box-sizing: border-box;
 }
 
 /* Image Section */
@@ -513,8 +515,19 @@ footer a p{
 	display:inline-block;
 }
 
+.image-section img{
+  width:100%;
+  max-width:600px;
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
+
 .image-preview{
 	width:100%;
+  max-width:600px;
+  margin-left:auto;
+  margin-right:auto;
 	display:flex;
 	justify-content:center;
 }
@@ -532,20 +545,20 @@ footer a p{
 }
 
 .headline h1{
-	font-size:30px;
+	font-size:1.5em;
 }
 
 /* Category Section */
 .category-selection{
 	width:100%;
 	display:flex;
-	justify-content:center;
 }
 
 .category{
 	width:25%;
   background-color:white;
   padding:10px 20px 10px 20px;
+  box-sizing: border-box;
   text-align:center;
 }
 
@@ -553,9 +566,20 @@ footer a p{
   font-size:30px;
 }
 
+.category-image-container{
+  width:100%;
+  overflow:hidden;
+  position:relative;
+  padding-top: 100%;
+  margin-bottom:20px;
+}
 .category img{
-	width:100%;
-  margin: 10px 0px 20px 0px;
+  width: 100%;
+	position:absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .category input[type=button]{
@@ -584,7 +608,19 @@ footer a p{
   text-align:center;
 }
 
+.testimony-image-container{
+  width:100%;
+  overflow:hidden;
+  position:relative;
+  padding-top: 100%;
+}
+
 .testimony img{
+  position:absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   width: 100%;
 }
 
@@ -615,12 +651,31 @@ footer a p{
 
 
 /* Contact Us */   
+.contact-section{
+  width:100%;
+  height:100vh;
+  display:flex;
+}
+
 .contact-form{
+  width:50%;
+  margin-top:auto;
+  margin-bottom:auto;
   padding:20px;
+  box-sizing: border-box;
 }
 
 .contact-form h1{
   margin:0;
+}
+
+.contact-form div input[type=text]{
+  width:50%;
+  padding:12px;
+  border:1px solid black;
+  margin-left:auto;
+  margin-right:auto;  
+  box-sizing: border-box;
 }
 
 .contact-form input[type=text],
@@ -640,14 +695,36 @@ footer a p{
   margin-top:20px;
 }
 
-.contact-information .contact-details{
-  display:flex;
+.contact-information{
+  width:50%;
+  margin-top:auto;
+  margin-bottom:auto;
+  padding:20px;
+  box-sizing: border-box;
 }
 
-.contact-information .contact-details-images{
-  display:flex;
+.contact-information h1{
+  margin:0;
 }
 
-.contact-details-images a img{
+.contact-details{
+  width:50%;
+  margin-right:auto;
+  margin-left:auto;
+  padding:25px 10px 25px 10px;
+  box-sizing: border-box;
+}
+
+.contact-details div{
+  padding:10px;
+  box-sizing: border-box;
+}
+
+.contact-details div p{
+  padding-left:50px;
+  box-sizing: border-box;
+}
+
+.contact-details div img{
   width:50px;
 }
